--- a/front/angular.json
+++ b/front/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "hexagones": {
+    "chiffredeux": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/hexagones",
+            "outputPath": "dist/chiffredeux",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -59,10 +59,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "hexagones:build:production"
+              "buildTarget": "chiffredeux:build:production"
             },
             "development": {
-              "buildTarget": "hexagones:build:development"
+              "buildTarget": "chiffredeux:build:development"
             }
           },
           "defaultConfiguration": "development"
