--- a/back/pyproject.toml
+++ b/back/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "sae5_graphes"
 version = "0.1.0"
-description = "Logiciel de graphes"
+description = "Logiciel de gestion de graphes"
 authors = [
     {name = "Florian", email = ""},
     {name = "Alexis", email = ""},
@@ -18,12 +18,11 @@ dependencies = [
 ]
 requires-python = ">=3.10"
 readme = "README.md"
-license = {text = "MIT"}
+license = "MIT"
 
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
 
-
-[tool.pdm]
-distribution = true
+[tool.pdm.scripts]
+start = "python src/sae5_graphes/routes.py"
